# restriction-enzymes

./: .prettierignore  README.md  mise.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yaml  ci.yml  publish.yaml
scripts/: generate.py
src/: enzymes.ts  index.ts  types.ts
tests/: enzymes.test.ts  index.test.ts
